Character Expansion New Startup splash Various overflow fixes

--- a/bin/assets/css/launcher.css
+++ b/bin/assets/css/launcher.css
@@ -20,7 +20,7 @@ html, body {
   box-sizing: border-box;
   background-size: cover;
   background-position: center;
-  background-image: url('../img/launcher.jpg');
+  background-image: url('../img/sentinel_splash.png');
   background-repeat: no-repeat;
   -webkit-app-region: drag;
 }
