--- a/bin/assets/css/styles.css
+++ b/bin/assets/css/styles.css
@@ -43,7 +43,7 @@ iframe {
   margin: 0;
   padding: 0 0 0 100px;
   box-sizing: border-box;
-  overflow: hidden;
+  overflow-x: hidden;
 
   opacity: 0;
   pointer-events: none;
@@ -178,6 +178,7 @@ iframe {
   height: auto;
   box-sizing: border-box;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  transition: all 0.3s ease;
 }
 
 .character {
@@ -192,13 +193,18 @@ iframe {
   transition: all 0.2s ease;
 }
 
+.character.active {
+  height: 43em;
+  overflow-y: auto;
+}
+
 .character > .header {
   display: flex;
   position: relative;
   width: 100%;
   height: 100px;
   justify-content: space-between;
-  margin: 0 0 10px 0;
+  margin: 0 0 30px 0;
   padding: 0;
   box-sizing: border-box;
   overflow: hidden;
@@ -271,6 +277,20 @@ iframe {
   background: var(--primary);
 }
 
+.character > .data {
+  display: block;
+  position: relative;
+  width: 95%;
+  height: auto;
+  margin: 10px auto;
+  padding: 5px;
+  box-sizing: border-box;
+  border-radius: 4px;
+  overflow: auto;
+  background: var(--darkest);
+  box-shadow: inset 0px 0px 7px 0px rgba(0,0,0,0.5);
+}
+
 .btn {
   display: inline-block;
   position: relative;
@@ -285,12 +305,20 @@ iframe {
   cursor: pointer;
   background: var(--primary);
   color: #FAFAFA;
+  user-select: none;
 
   transition: all 0.2s ease;
 }
 
 .btn:hover {
   background-color: var(--primary-dark);
+}
+
+.btn.btn-outline {
+  background: none;
+  border: 2px solid var(--primary);
+  cursor: pointer;
+  font-weight: 300;
 }
 
 .die {
